Contrast fixed
But I don't like the button color. Hmmm...

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -256,6 +256,10 @@
     width: 300px;
   }
 }
+/* darken for better contrast */
+.reduce-brightness {
+  color:#00008b;
+}
 
 /* hidden class for js */
 .hidden {
@@ -344,8 +348,14 @@
 }
 
 /* heading sizes */
+h1 {
+ font-size: 1.7rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
 h3 {
- font-size: 2rem;
+  font-size: 1.1rem;
 }
 
 /* navbar section */
